@@ -46,21 +46,46 @@ int ExecPendingBootOff(void);
 
 void display_help(void)
 {
-	winx_printf("Interactive mode commands:\n"
-				"  udefrag -a X: - volume analysis\n"
-				"  udefrag X:    - volume defragmentation\n"
-				"  udefrag -o X: - volume optimization\n\n"
-				"  Multiple volume letters allowed,\n"
-				"  --all, --all-fixed keys are supported here too.\n\n"
-				"  udefrag -l    - displays list of volumes except removable\n"
-				"  udefrag -la   - displays list of all available volumes\n"
-				"  exit          - continue Windows boot\n"
-				"  reboot        - reboot the PC\n"
-				"  shutdown      - shut down the PC\n"
-				"  boot-on       - enable boot time defragger\n"
-				"  boot-off      - disable boot time defragger\n"
-				"  help          - display this help screen\n"
-				);
+    int i;
+    char help_message[][128] = {
+                            "Interactive mode commands:\n",
+                            "\n",
+                            "  help          - display this help screen\n",
+                            "  @echo on      - enable command line display\n",
+                            "  @echo off     - disable command line display\n",
+                            "  set           - set environment variable\n",
+                            "\n",
+                            "  udefrag -l    - displays list of volumes except removable\n",
+                            "  udefrag -la   - displays list of all available volumes\n",
+                            "  udefrag -a X: - volume analysis\n",
+                            "  udefrag X:    - volume defragmentation\n",
+                            "  udefrag -o X: - volume optimization\n",
+                            "\n",
+                            "    Multiple volume letters allowed,\n",
+                            "    --all, --all-fixed keys are supported here too.\n",
+                            "\n",
+                            "  boot-on       - enable boot time defragger\n",
+                            "  boot-off      - disable boot time defragger\n",
+                            "  reboot        - reboot the PC\n",
+                            "  shutdown      - halt the PC\n",
+                            "  exit          - continue Windows boot\n"
+                            };
+                
+	for(i = 0; i < sizeof(help_message)/sizeof(help_message[0]); i++){
+        winx_printf(help_message[i]);
+        
+        /* maximum boot screen height is 24 rows */
+        
+        if((i > 0) && ((i % HELP_DISPLAY_ROWS) == 0)){
+            winx_printf("\n      Hit any key to display next page...\n");
+            
+            while(1){
+                if(winx_kbhit(100) >= 0) break;
+            }
+            
+            winx_printf("\n");
+        }
+    }
 }
 
 void __stdcall NtProcessStartup(PPEB Peb)
